# cmake_workspace_for_vscode_c_cpp_extension

./: CMakeLists.txt  CMakePresets.json
example/example/: CMakeLists.txt  example.cpp  test.cpp
